--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head><title>Midterm Server</title></head>
   <body>
     <h1>Welcome to My Midterm Server!</h1>
+    <h2>Attempting changes</h2>
     <p>Student Name: Amit Christian</p>
     <p>Student ID: 100937637</p>
   </body>
